--- a/Flixster/Base.lproj/Main.storyboard
+++ b/Flixster/Base.lproj/Main.storyboard
@@ -15,37 +15,49 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="154" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="zj5-ah-WHz">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="zj5-ah-WHz">
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="MovieCell" rowHeight="154" id="uaY-KR-iBr" customClass="MovieCell" customModule="Flixster" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="414" height="154"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="MovieCell" id="uaY-KR-iBr" customClass="MovieCell" customModule="Flixster" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="154.5"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="uaY-KR-iBr" id="clq-tB-96T">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="154"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="154.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="tvQ-xh-SLW">
-                                                    <rect key="frame" x="20" y="13" width="97" height="130"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8pf-Cw-aEC">
-                                                    <rect key="frame" x="125" y="13" width="281" height="26"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8pf-Cw-aEC">
+                                                    <rect key="frame" x="125" y="13" width="281" height="20.5"/>
                                                     <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Tqf-W0-9VV">
-                                                    <rect key="frame" x="125" y="47" width="281" height="83"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Tqf-W0-9VV">
+                                                    <rect key="frame" x="125" y="42" width="281" height="20.5"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="tvQ-xh-SLW">
+                                                    <rect key="frame" x="20" y="11" width="97" height="132"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="132" id="AAh-kD-KS0"/>
+                                                        <constraint firstAttribute="width" constant="97" id="acU-Ei-rV4"/>
+                                                    </constraints>
+                                                </imageView>
                                             </subviews>
+                                            <constraints>
+                                                <constraint firstItem="tvQ-xh-SLW" firstAttribute="leading" secondItem="clq-tB-96T" secondAttribute="leading" constant="20" id="4BZ-ZU-Vvh"/>
+                                                <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="Tqf-W0-9VV" secondAttribute="bottom" constant="10" id="BIR-xT-tqK"/>
+                                                <constraint firstAttribute="trailing" secondItem="Tqf-W0-9VV" secondAttribute="trailing" constant="8" id="Vd7-G6-Mqk"/>
+                                                <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="tvQ-xh-SLW" secondAttribute="bottom" constant="11" id="ZBD-Ym-6Xo"/>
+                                                <constraint firstItem="tvQ-xh-SLW" firstAttribute="top" secondItem="clq-tB-96T" secondAttribute="top" constant="11" id="b3E-ON-uUL"/>
+                                                <constraint firstAttribute="trailing" secondItem="8pf-Cw-aEC" secondAttribute="trailing" constant="8" id="bL2-Mj-bkU"/>
+                                                <constraint firstItem="Tqf-W0-9VV" firstAttribute="top" secondItem="8pf-Cw-aEC" secondAttribute="bottom" constant="8.5" id="brU-4c-iHt"/>
+                                                <constraint firstItem="8pf-Cw-aEC" firstAttribute="top" secondItem="clq-tB-96T" secondAttribute="top" constant="13" id="k7o-vE-ZAz"/>
+                                                <constraint firstItem="Tqf-W0-9VV" firstAttribute="leading" secondItem="tvQ-xh-SLW" secondAttribute="trailing" constant="8" id="q0R-fu-kCd"/>
+                                                <constraint firstItem="8pf-Cw-aEC" firstAttribute="leading" secondItem="tvQ-xh-SLW" secondAttribute="trailing" constant="8" id="we3-LX-M6y"/>
+                                            </constraints>
                                         </tableViewCellContentView>
                                         <connections>
                                             <outlet property="posterView" destination="tvQ-xh-SLW" id="8F7-Fc-2nV"/>
@@ -61,6 +73,12 @@
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstAttribute="bottom" secondItem="zj5-ah-WHz" secondAttribute="bottom" id="Lnr-ys-aPc"/>
+                            <constraint firstItem="zj5-ah-WHz" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="ZeT-1z-AjS"/>
+                            <constraint firstItem="zj5-ah-WHz" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="eWK-3N-vXl"/>
+                            <constraint firstItem="zj5-ah-WHz" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="hHk-oo-2rw"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <navigationItem key="navigationItem" title="Movies" id="H1h-tc-JHt"/>
